--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,10 @@
 {
   "version": "0.2.0",
   "configurations": [
+
     {
-      "command": "./node_modules/.bin/astro dev",
-      "name": "Development server",
+      "command": "npm run dev",
+      "name": "npm dev",
       "request": "launch",
       "type": "node-terminal"
     }
